[package]
name = "iota-migration-address-wasm"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"
console_error_panic_hook = "0.1.6"
bee-transaction = { git = "https://github.com/Alex6323/bee-p.git", rev = "cf47287dbb37861668d378ea3ae3b8c0f2852566" }
iota-crypto = { version = "0.5.0", features = ["ed25519", "wots_deprecated_do_not_use", "kerl_deprecated_do_not_use"] }
bee-message = "0.1.1"
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }
js-sys = "0.3.39"
blake2 = "0.9"